# agentic-core-rs

./: Cargo.toml  README.MD  README.md
examples/: completion.rs  completion_tools.rs  completion_with_rag.rs  mcp_with_adapter.rs  openai.rs
examples/models/: mod.rs  ticker_embedding.rs
src/: lib.rs
src/agent/: builder.rs  completion.rs  mod.rs  rag.rs  service.rs
src/agents/: agent.rs  builder.rs  mod.rs
src/capabilities/: completion.rs  messages.rs  mod.rs
src/capabilities/client/: completion.rs  embeddings.rs  mcp.rs  mod.rs  tool.rs
src/capabilities/completion/: mcp.rs  message.rs  mod.rs  rcp.rs  request.rs  response.rs  tool.rs
src/capabilities/embeddings/: mod.rs
src/capabilities/tools/: mcp.rs  mod.rs  request.rs  response.rs  tool.rs
src/http/: mod.rs
src/llm/: client.rs  mod.rs
src/llm/anthropic/: client.rs  completion.rs  model.rs
src/llm/gemini/: client.rs  completion.rs  interactions.rs  mod.rs  model.rs
src/llm/openai/: client.rs  completion.rs  model.rs
src/providers/: mod.rs
src/providers/anthropic/: completion.rs  mod.rs  request.rs  response.rs
src/providers/gemini/: completion.rs  embeddings.rs  mod.rs  request.rs  response.rs
src/providers/openai/: completion.rs  embeddings.rs  mod.rs  request.rs  response.rs
