[package]
name = "agentic-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
tracing = {version = "0.1.40"}
tracing-subscriber = { version= "0.3.18", features = ["env-filter"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json", "stream", "multipart"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
futures = "0.3"
futures-util = "0.3.31"
bytes = "1.11.0"
tokio-stream = "0.1.18"
eventsource-stream = "0.2.3"
